--- a/_includes/members.html
+++ b/_includes/members.html
@@ -4,9 +4,9 @@
     <hr class="divider border border-primary border-2">
     <div class="row justify-content-center">
       {% for member in section.members %}
-      <div class="col-lg-3 col-md-6 text-center">
+      <div class="col-lg-4 col-md-6 text-center">
         <div class="member-box">
-          <img class="text-primary" src="{{ member.image }}" alt="{{ member.title }}">
+          <img class="text-primary mb-3" src="{{ member.image }}" alt="{{ member.title }}">
           <h3 class="h4 mb-2">{{ member.title }}</h3>
           <p class="text-white-50 mb-0">{{ member.text }}</p>
         </div>
