--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -1,8 +1,8 @@
-<div id="portfolio" class="{{ section.background_style }}">
+<!-- <div id="portfolio" class="{{ section.background_style }}">
   <div class="container-fluid p-0">
     <div class="row g-0">
       {% for proj in section.projects %}
-      <div class="col-lg-4 col-sm-6">
+      <div class="col-lg-4 col-12">
           <a class="portfolio-box" href="assets/img/portfolio/fullsize/{{ proj.icon }}" title="{{ proj.title }}">
               <img class="img-fluid" src="assets/img/portfolio/thumbnails/{{ proj.icon }}" alt="{{ proj.icon }}" />
               <div class="portfolio-box-caption">
@@ -14,4 +14,4 @@
       {% endfor %}
     </div>
   </div>
-</div>
+</div> -->
