--- a/_includes/services.html
+++ b/_includes/services.html
@@ -3,10 +3,9 @@
     <h2 class="text-center mt-0">{{ section.title }}</h2>
     <hr class="divider border border-primary border-2">
     <div class="row gx-4 gx-lg-5 justify-content-center">
-      <!-- {#% assign cols = section.size | at_most: 4 %#} -->
       {% assign cols = section.size %}
-      {% if cols > 4 %}
-        {% assign cols = 4 %}
+      {% if cols > 3 %}
+        {% assign cols = 3 %}
       {% endif %}
 
       {% assign colsL = 12 | divided_by: cols %}
@@ -15,7 +14,9 @@
       {% for service in section.services %}
       <div class="col-lg-{{ colsL }} col-md-{{ colsM }} text-center">
         <div class="mt-5">
-          <div class="mb-2"><i class="{{ service.icon }} bi text-primary" style="font-size: 64px;"></i></div>
+          <div class="mb-2">
+            <i class="{{ service.icon }} bi text-primary" style="font-size: 64px;"></i>
+          </div>
           <h3 class="h4 mb-2">{{ service.title }}</h3>
           <div class="text-muted mb-0">
             {{ service.text | markdownify }}
