--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -73,11 +73,10 @@
   --bs-border-radius-xl: 1rem;
   --bs-border-radius-2xl: 2rem;
   --bs-border-radius-pill: 50rem;
-  --bs-link-color: #f4623a;
-  --bs-link-hover-color: #c34e2e;
+  --bs-link-color: #B39A50; /* Vanderbilt Gold */
+  --bs-link-hover-color: #4D4D4F; /* Dark Gray */
   --bs-code-color: #d63384;
   --bs-highlight-bg: #fff3cd;
-}
 
 *,
 *::before,
