--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -10855,7 +10855,7 @@ hr.divider {
   height: 0.2rem;
   max-width: 3.25rem;
   margin: 1.5rem auto;
-  background-color: #B39A50; /* Vanderbilt Gold */
+  background-color: #f4623a;
   opacity: 1;
 }
 
