--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -46,7 +46,7 @@
   --bs-body-bg: #FFFFFF; /* White */
   --bs-link-color: #B39A50; /* Vanderbilt Gold */
   --bs-link-hover-color: #4D4D4F; /* Dark Gray */
-  --bs-primary-rgb: #B39A50; /* Vanderbilt Gold */
+  --bs-primary-rgb: 207, 174, 112; /* Vanderbilt Gold */
   --bs-secondary-rgb: 108, 117, 125;
   --bs-success-rgb: 25, 135, 84;
   --bs-info-rgb: 13, 202, 240;
