remove redundant base.html

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -21,11 +21,14 @@
         <link href="assets/css/main.css" rel="stylesheet">
 {% seo %}
     </head>
-
-
-
     <body id="page-top" class="{% if page.layout == site.landing_template %}landing {% endif %}">
-        {% include nav.html    section=section site=site page=page %}
+        <header>
+            <div class="container text-center">
+                <img src="../assets/img/DimensionalV.png" alt="Dimensional V" class="header-logo">
+                <h1>{{ site.title }}</h1>
+            </div>
+        </header>
+        {% include nav.html section=section site=site page=page %}
         {{ content }}
         {% include footer.html section=section site=site page=page %}
 
@@ -41,5 +44,4 @@
         <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
         <!-- <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script> -->
     </body>
-
 </html>
