--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -83,12 +83,20 @@
   --bs-highlight-bg: #fff3cd;
 }
 
+.header-section {
+  position: relative;
+  z-index: 1; /* Ensure the header is above the background */
+}
+
 .header-logo {
   display: block;
   margin: 0 auto;
   max-width: 250px;
   height: auto;
+  position: relative;
+  z-index: 2; /* Ensure the logo is above the header content */
 }
+
 
 *,
 *::before,
