--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -7,7 +7,7 @@
         <meta name="author" content="" />
         <title>{% assign title_is_not_empty = page.title | is_not_empty %}{% if title_is_not_empty %}{{ page.title }} - {% endif %}{{ site.title }}</title>
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="{{ 'assets/favicon.ico' | relative_url }}" />
+        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Bootstrap Icons-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css" rel="stylesheet" />
         <!-- Google fonts-->
@@ -16,19 +16,16 @@
         <!-- SimpleLightbox plugin CSS-->
         <link href="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.css" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="{{ 'assets/css/styles.css' | relative_url }}" rel="stylesheet" />
+        <link href="assets/css/styles.css" rel="stylesheet" />
         <!-- Custom CSS -->
-        <link href="{{ 'assets/css/main.css' | relative_url }}">
+        <link href="assets/css/main.css" rel="stylesheet">
 {% seo %}
     </head>
+
+
+
     <body id="page-top" class="{% if page.layout == site.landing_template %}landing {% endif %}">
-        <header>
-            <div class="container text-center">
-                <img src="{{ 'assets/img/DimensionalV.png' | relative_url }}" alt="Dimensional V" class="header-logo">
-                <h1>{{ site.title }}</h1>
-            </div>
-        </header>
-        {% include nav.html section=section site=site page=page %}
+        {% include nav.html    section=section site=site page=page %}
         {{ content }}
         {% include footer.html section=section site=site page=page %}
 
@@ -37,11 +34,12 @@
         <!-- SimpleLightbox plugin JS-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.js"></script>
         <!-- Core theme JS-->
-        <script src="{{ 'assets/js/scripts.min.js' | relative_url }}"></script>
+        <script src="assets/js/scripts.min.js"></script>
         <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
         <!-- * *                               SB Forms JS                               * *-->
         <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
         <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
         <!-- <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script> -->
     </body>
+
 </html>
