--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -85,7 +85,7 @@
 
 .header-logo {
   display: block;
-  margin: 0 auto;
+  margin: 50;
   max-width: 250px;
   height: auto;
   position: relative;
