--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -10871,7 +10871,7 @@ hr.divider {
   height: 0.2rem;
   max-width: 3.25rem;
   margin: 1.5rem auto;
-  background-color: #f4623a;
+  background-color: #ECB748;
   opacity: 1;
 }
 
