--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -8116,7 +8116,7 @@ textarea.form-control-lg {
 
 .text-white-50 {
   --bs-text-opacity: 1;
-  color: rgba(245, 243, 239, 0.75) !important; 
+  color: rgba(245, 243, 239, 0.5) !important; 
   /* color: rgba(255, 255, 255, 0.5) !important; */
 }
 
@@ -10856,7 +10856,8 @@ body {
 }
 
 .text-white-75 {
-  color: rgba(255, 255, 255, 0.75) !important;
+  color: rgba(245, 243, 239, 0.75) !important; 
+  /* color: rgba(255, 255, 255, 0.75) !important; */
 }
 
 .btn-xl {
