--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -6671,7 +6671,7 @@ textarea.form-control-lg {
 }
 
 .text-bg-primary {
-  color: #fff !important;
+  color: #777777 !important;
   background-color: RGBA(244, 98, 58, var(--bs-bg-opacity, 1)) !important;
 }
 
