--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -8117,7 +8117,7 @@ textarea.form-control-lg {
 .text-white-50 {
   --bs-text-opacity: 1;
   color: rgba(245, 243, 239, 0.5) !important; 
-  /* color: rgba(255, 255, 255, 0.5) !important; */
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* Add drop shadow */
 }
 
 .text-reset {
