change menu text highlight color

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -10899,10 +10899,10 @@ hr.divider-light {
   padding: 0.75rem 0;
 }
 #mainNav .navbar-nav .nav-item .nav-link:hover, #mainNav .navbar-nav .nav-item .nav-link:active {
-  color: #f4623a;
+  color: #ECB748;
 }
 #mainNav .navbar-nav .nav-item .nav-link.active {
-  color: #f4623a !important;
+  color: #ECB748 !important;
 }
 @media (min-width: 992px) {
   #mainNav {
